# mutation_tester

./: .dockerignore  .env.example  Cargo.toml  README.md
config/: default.toml
examples/: test_arithmetic.rs  test_conditionals.rs  test_logic.rs
migrations/: 001_initial_schema.sql
migrations/20250716_create_mutation_tables/: down.sql  up.sql
scripts/: deploy.sh  dev.sh
src/: app.rs  config.rs  database.rs  error.rs  lib.rs  main.rs
src/handlers/: health.rs  mod.rs  mutations.rs
src/models/: mod.rs
src/mutation/: analyzer.rs  ast_mutator.rs  config_loader.rs  engine.rs  logger.rs  mod.rs  mutators.rs  reports.rs  runner.rs  types.rs
src/services/: mod.rs  mutation_service.rs
tests/: health.rs  integration.rs  mutation_logger_failures.rs
workflows/: ci.yml  mutation-testing.yml
