[package]
name = "flux-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.14"
prometheus = "0.13"
config = "0.14"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.20.0"
opentelemetry_sdk = "*"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
lapin = { version = "2.3" }
reqwest = "0.11"
toml = "0.8.23"
futures-lite = "1.12"
rand = "0.9.1"
url = "2.5.4"
fastrand = "2.3.0"
rayon = "1.10.0"
syn = { version = "2.0.104", features = ["full", "parsing", "visit-mut"] }
quote = "1.0.40"
serde_yaml = "0.9.34"
plotters = "0.3.7"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures-lite = "1.12"
testcontainers = "0.15"
